--- a/Autho_MVA-3/Pages/_Layout.cshtml
+++ b/Autho_MVA-3/Pages/_Layout.cshtml
@@ -1,3 +1,5 @@
+﻿@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
 <!DOCTYPE html>
 <html>
 <head>
@@ -23,7 +25,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>      
                     <span class="icon-bar"></span>
                 </button>
                 <a asp-page="/Index" class="navbar-brand">Autho_MVA_3</a>
@@ -31,7 +33,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-page="/Index">Home</a></li>
+                    @if ((await AuthorizationService.AuthorizeAsync(User, "CanadianOrAdmin")).Succeeded)
+                    {
                     <li><a asp-page="/About">About</a></li>
+                    }
                     <li><a asp-page="/Contact">Contact</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
